*) simplify Heap OOM